# horsetalk

./: CHANGELOG.md  pyproject.toml
horsetalk/: __init__.py  going.py  jump_category.py  obstacle.py  race_title.py  silks.py
tests/: test_going.py  test_jump_category.py  test_obstacle.py  test_race_distance.py  test_race_title.py
