[tool.poetry]
name = "horsetalk"
version = "0.30.0"
description = "A library of enums and parsers for common horseracing terminology"
authors = ["peaky76 <robertjamespeacock@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
include = ["**/*.pyi"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
babel = "^2.17.0"
peak-utility = "~0"
pendulum = "^3.0.0"
pint = ">=0.23,<0.26"

[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
coverage = "^7.2.2"
mypy = "^1.1.1"
pre-commit = ">=3.6,<5.0"
pytest = ">=7.2.2,<10.0.0"
pytest-codspeed = ">=2.2,<5.0"
pytest-cov = ">=4,<8"
pytest-mock = "^3.10.0"
radon = "^6.0.1"
ruff = ">=0.0.261,<0.15.1"
skylos = ">=1.2,<4.0"
sphinx = ">=6.1.3,<10.0.0"
sphinx-rtd-theme = ">=1.2,<4.0"

[tool.ruff.lint]
select = [
    "E", # pycodestyle Error
    "F", # pyflakes
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "FBT", # flake8-boolean-trap
    "C4", # flake8-comprehensions
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff specific

]
ignore = ["E501", "E741", "F821", "PERF203", "PT011"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
